<resources>
    <string name="app_name">NhatNguyen</string>
    <string name="textview_text_welcome_back">Welcome Back!</string>
    <string name="textview_text_scratch">scratch</string>
    <string name="textview_text_please_login_to_continue">Please login to continue.</string>
    <string name="textview_text__address_email">Email address</string>
    <string name="edittext_hint_enter_your_email">Enter your email</string>
    <string name="edittext_hint_enter_your_password">Enter your password</string>
    <string name="textview_text_forgot_password">Forgot password?</string>
    <string name="button_text_login">Login</string>
    <string name="textview_text_new_to_scratch">New to Scratch</string>
    <string name="textview_text_create_Account">Create Account Here</string>
    <string name="textview_text_create_account_to_continue">Create account to continue.</string>
    <string name="textview_text_full_name">Full Name</string>
    <string name="textview_text_email">Email</string>
    <string name="textview_text_password">Password</string>
    <string name="button_text_create_account">Create Acount</string>
    <string name="textview_hint_already_have_an_account">Already have an account?</string>
    <string name="textview_text_login_here">Login Here</string>
    <string name="textview_text_start">Start</string>
    <string name="textview_text_from_scratch">from Scratch</string>
    <string name="textview_text_back_to_profile">Back to Profile</string>
    <string name="textview_text_edit_profile">Edit Profile</string>
    <string name="textview_text_edit_profile_picture">Edit Profile Picture</string>
    <string name="textview_hint_bio">Bio</string>
    <string name="textview_text_private_information">Private Information</string>
    <string name="textview_text_phone">Phone</string>
    <string name="button_text_save_profile">Save Profile</string>
    <string name="todo">Todo</string>
    <string name="done">Done</string>
    <string name="textview_text_input">Input</string>
    <string name="textview_text_todo_new">Todo new</string>
    <string name="button_text_done">Done</string>
    <string name="textview_text_edit_profile">Edit Profile</string>
    <string name="textview_text_todo">todo</string>
    <string name="textview_text_done_1">done 1</string>
    <string name="button_text_done">Done</string>
    <string name="textview_text_input">Input</string>
    <string name="textview_text_todo_new">Todo new</string>
</resources>
