<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="asiantech.internship.summer.layouteditor.EditProfileActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/img_icon_back"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="20dp"
        android:layout_height="20dp"/>
    <TextView
        android:id="@+id/tv_back_profile"
        android:layout_marginLeft="10dp"
        android:text="@string/textview_text_back_to_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_edit_profile"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/colorBlack"
        android:text="@string/textview_text_edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_icon_back"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_profile"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:id="@+id/circle_image_view"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/img_man"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/tv_edit_picture"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/color_text"
        android:text="@string/textview_text_edit_profile_picture"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/circle_image_view"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_full_name"
        android:layout_marginTop="10dp"
        android:text="@string/textview_text_full_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_picture"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_full_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_full_name"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_bio"
        android:layout_marginTop="15dp"
        android:text="@string/textview_hint_bio"
        app:layout_constraintTop_toBottomOf="@+id/edt_full_name"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_bio"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_bio"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_private"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:text="@string/textview_text_private_information"
        app:layout_constraintTop_toBottomOf="@+id/edt_bio"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_email"
        android:layout_marginTop="15dp"
        android:text="@string/textview_text_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_private"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_phone"
        android:layout_marginTop="18dp"
        android:text="@string/textview_text_phone"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_phone"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="TextFields" />
    <Button
        android:id="@+id/btn_save_profile"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        android:text="@string/button_text_save_profile"
        android:background="@drawable/bg_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/edt_phone"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>
