<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:scaleType="fitXY"
        android:id="@+id/img_baner"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:src="@drawable/img_baner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/img_icon"
        android:layout_marginTop="30dp"
        android:scaleType="fitStart"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        android:layout_width="30dp"
        android:layout_height="30dp"/>
    <TextView
        android:textColor="@color/colorBlack"
        android:layout_marginTop="33dp"
        android:text="@string/textview_text_scratch"
        app:layout_constraintStart_toEndOf="@+id/img_icon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_text_start"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="@id/img_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_text_start"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"
        app:layout_constraintStart_toEndOf="@+id/guideline"/>
    <TextView
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="@id/tv_text_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_text_from_scratch"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"
        app:layout_constraintStart_toEndOf="@+id/guideline"/>
    <TextView
        android:id="@+id/tv_create_account"
        android:layout_marginTop="20dp"
        android:text="@string/textview_text_create_account_to_continue"
        app:layout_constraintTop_toBottomOf="@+id/img_baner"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="15dp"
        android:id="@+id/tv_full_name"
        android:text="@string/textview_text_full_name"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_account"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_full_name"
        android:maxLength="30"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_full_name"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/tv_email"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/textview_text_email"
        app:layout_constraintTop_toBottomOf="@id/edt_full_name"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <TextView
        android:id="@+id/tv_password"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:text="@string/textview_text_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_btn_login"
        android:padding="17dp"
        android:text="@string/button_text_create_acount"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:id="@+id/tv_quesion"
        android:layout_marginTop="10dp"
        android:hint="@string/textview_hint_already_have_an_account"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_account"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="15dp"
        android:textColor="@color/color_text"
        android:id="@+id/tv_login_here"
        android:text="@string/textview_text_login_here"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_quesion"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>
