<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tvTodoNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40dp"
        android:text="@string/textview_text_todo_new"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTodoNew"
        style="@style/editTextEntryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="24"
        app:layout_constraintBottom_toBottomOf="@+id/tvTodoNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTodoNew"
        app:layout_constraintTop_toTopOf="@+id/tvTodoNew"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_text_input"
        android:textSize="@dimen/text_size_20dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/edtTodoNew" />

    <EditText
        android:id="@+id/edtTodo"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:autofillHints=""
        android:background="@drawable/border_edit_text"
        android:gravity="top"
        android:inputType="text|textMultiLine"
        android:padding="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_20dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tvInput"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/button_text_done"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/edtTodo" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_40dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDone" />
</androidx.constraintlayout.widget.ConstraintLayout>
